--- a/index-en.html
+++ b/index-en.html
@@ -24,77 +24,59 @@
     
       <div class="crossnote markdown-preview  ">
       
-<p><strong>Traditional Chinese</strong> | <a href="./index-en.html">English</a></p>
+<p><a href="./index.html">繁體中文</a> | <a href="./index-en.html">English</a></p>
+<h3 id="have-you-ever-asked-yourself-these-questions-yet-still-couldnt-find-the-answers">Have you ever asked yourself these questions, yet still couldn’t find the answers? </h3>
+<p>You’ve actually been trying very hard.<br>
+But some things can’t be untangled through endurance, effort, or logic alone.</p>
+<p>You may be experiencing one of the following:</p>
+<p><strong>▍Feeling powerless in a relationship</strong><br>
+You and your partner argue over small things, and both of you feel misunderstood.<br>
+You know the problem isn’t just about money, personality, or daily stress,<br>
+yet you can’t quite pinpoint where things are truly stuck.<br>
+You think about leaving, but you can’t bear to.<br>
+You stay, but it feels painful.<br>
+You carry everything on your own, unsure who you can turn to.</p>
+<p><strong>▍Growing distance between you and your child</strong><br>
+Your child lacks motivation to study, and you feel worried, heartbroken, and helpless.<br>
+You miss the child who once clung to you,<br>
+but somewhere along the way, it feels like a wall has formed between you.<br>
+You want to help, but you don’t know what the real issue is.</p>
+<p><strong>▍Loneliness within a relationship</strong><br>
+You have a partner, yet it feels like you’re holding everything together alone.<br>
+One of you earns money outside, the other carries the emotional and caregiving load at home.<br>
+There are no major conflicts, yet there is no real closeness either.</p>
+<p><strong>▍Your child’s social struggles</strong><br>
+Your child says they have no friends at school, feel excluded, or misunderstood.<br>
+You want to help, but don’t know where to begin.<br>
+Teachers say everything is fine, but you know your child is hurting.</p>
+<p><strong>▍Confusion about your career</strong><br>
+You feel unmotivated at work, yet you don’t know what would suit you better.<br>
+Changing jobs feels risky, but staying feels like your spirit is slowly fading.</p>
+<p><strong>▍Uncertainty in a new relationship</strong><br>
+You sense something feels “off,”<br>
+but you can’t quite name what it is or decide whether to continue.</p>
+<p><strong>▍Wanting to understand your true self</strong><br>
+You want to know your strengths and blind spots—<br>
+why the way others see you differs from how you see yourself.</p>
+<p><strong>▍Feeling low or anxious without knowing why</strong><br>
+You know something isn’t right,<br>
+but no one seems able to explain what’s really going on.</p>
+<p><strong>▍Wanting to know which colors truly support you</strong><br>
+Not just what looks good,<br>
+but which colors stabilize you, protect you, and support your emotional state.</p>
+<p><strong>▍Wanting to understand your spiritual state</strong><br>
+You feel that life is more than just getting by,<br>
+yet you don’t know which stage your energy is currently in.</p>
 <hr>
-<h2 id="why-might-you-need-an-aura-reading">Why Might You Need an Aura Reading? </h2>
-<p>Many people seek an aura reading not out of superstition or curiosity,<br>
-but because they are experiencing a state where—<br>
-<strong>despite their efforts, they still feel stuck.</strong></p>
-<p>You may resonate with one or more of the following:</p>
+<h3 id="through-aura-reading-i-can-help-you-see">Through Aura Reading, I can help you see: </h3>
 <ul>
-<li>You know what the issue is, yet you cannot truly change it</li>
-<li>The same emotions, relationships, or situations keep repeating</li>
-<li>Everything seems fine logically, yet inside you feel tired, empty, or “off”</li>
-<li>You have tried many methods, but nothing fully integrates</li>
+<li>Where you are truly stuck right now</li>
+<li>The interaction patterns within your relationships</li>
+<li>Why your emotions and energy are not flowing</li>
+<li>The direction, rhythm, and healing approach that suits you</li>
 </ul>
-<p>These states are often not caused by a lack of willpower or understanding, but by <strong>an inner energetic condition that has not yet been seen or adjusted</strong>.</p>
-<hr>
-<h2 id="what-does-aura-reading-do">What Does Aura Reading Do? </h2>
-<p>Aura reading is not about predicting the future or judging what is right or wrong.<br>
-Its core purpose is to:</p>
-<blockquote>
-<p><strong>Help you see your current inner state as it truly is.</strong></p>
-</blockquote>
-<p>Each of us lives through a certain <em>energetic state</em>, and this state influences:</p>
-<ul>
-<li>How you respond emotionally</li>
-<li>The people and situations you attract</li>
-<li>How you make decisions</li>
-<li>Whether real change is possible</li>
-</ul>
-<p>Aura reading helps you understand:</p>
-<ul>
-<li>Where you are energetically right now</li>
-<li>Which energies support you and which drain you</li>
-<li>Whether you are living from your true self or from adopted patterns</li>
-</ul>
-<hr>
-<h2 id="why-can-some-issues-only-be-addressed-through-aura-reading">Why Can Some Issues Only Be Addressed Through Aura Reading? </h2>
-<h3 id="1-it-perceives-layers-that-exist-before-language">1. It perceives layers that exist <em>before language</em> </h3>
-<p>Some states are not thoughts or emotions, but exist at a deeper, pre-verbal level.<br>
-This is why understanding something intellectually does not always lead to change.</p>
-<p>Aura reading can directly perceive these underlying structures.</p>
-<hr>
-<h3 id="2-it-focuses-on-your-state-not-just-events">2. It focuses on your <em>state</em>, not just events </h3>
-<p>Many challenges are not caused by events themselves, but by the inner state that cannot yet hold change.</p>
-<p>When the state shifts, change often happens naturally—without force.</p>
-<hr>
-<h3 id="3-it-distinguishes-what-is-truly-you-from-what-is-not">3. It distinguishes what is truly “you” from what is not </h3>
-<p>Some patterns come from:</p>
-<ul>
-<li>Family influences</li>
-<li>Residues from past relationships</li>
-<li>Roles projected onto you over time</li>
-</ul>
-<p>Aura reading helps clarify:<br>
-which energies are truly yours, and which are temporary attachments.</p>
-<hr>
-<h2 id="who-is-aura-reading-for">Who Is Aura Reading For? </h2>
-<p>You may benefit especially if you are experiencing:</p>
-<ul>
-<li>Repeating life patterns (relationships, work, self-worth)</li>
-<li>Confusion about who you are or where you are going</li>
-<li>Long-term fatigue or stagnation despite being “fine” medically</li>
-<li>A sense of not feeling like yourself</li>
-<li>A desire to understand your inner state beyond surface-level solutions</li>
-</ul>
-<hr>
-<h2 id="what-can-aura-reading-offer">What Can Aura Reading Offer? </h2>
-<p>It does not tell you what to do.<br>
-Instead, it helps you <strong>see the state from which you are living</strong>.</p>
-<p>When this becomes clear, change often unfolds naturally—<br>
-not through effort, but by returning to a state that truly fits you.</p>
-<hr>
+<p>Your aura has been sending signals all along —<br>
+it’s just that no one has helped translate them for you yet.</p>
 <h2 id="contact">Contact </h2>
 <ul>
 <li>Line ID: @211wegrx</li>
