--- a/index.html
+++ b/index.html
@@ -24,70 +24,57 @@
     
       <div class="crossnote markdown-preview  ">
       
-<p><strong>繁體中文</strong> | <a href="./index-en.html">English</a></p>
-<h2 id="為什麼你可能需要-aura-reading">為什麼你可能需要 Aura Reading？ </h2>
-<p>許多人需要 aura reading，並不是因為「迷信」或「好奇」，<br>
-而是因為他們正在經歷一種狀態——<br>
-<strong>明明已經很努力了，卻還是卡在某個地方。</strong></p>
-<p>也許你有以下感受：</p>
+<p><a href="./index.html">繁體中文</a> | <a href="./index-en.html">English</a></p>
+<h3 id="你是不是也在心裡問過這些問題卻一直找不到答案">你是不是也在心裡問過這些問題，卻一直找不到答案？ </h3>
+<p>你其實已經很努力了。<br>
+只是，有些卡住的地方，不是靠忍耐、努力或理性思考就能解開的。</p>
+<p>你可能正經歷這些狀態之一——</p>
+<p><strong>▍關係裡的無力感</strong><br>
+你和另一半常常為小事爭吵，彼此都覺得對方不理解自己。<br>
+你知道問題不只是錢、不只是個性、不只是生活壓力，<br>
+卻怎麼也說不清楚「到底卡在哪裡」。<br>
+想離開，又捨不得；留下，又覺得好痛苦。<br>
+你一個人承受，卻不知道該向誰求助。</p>
+<p><strong>▍親子之間越來越遠</strong><br>
+孩子不想唸書、沒有動力，你著急、心疼、卻又無力。<br>
+你開始懷念以前那個黏著你的孩子，<br>
+卻不知道從什麼時候開始，你們之間像隔了一層牆。<br>
+你想幫他，但不知道真正的問題在哪裡。</p>
+<p><strong>▍關係裡的孤單感</strong><br>
+明明有伴侶，卻像一個人在撐整個家。<br>
+一個在外賺錢，一個在裡面承擔情緒與照顧，<br>
+你們沒有吵架，卻也沒有真正靠近。</p>
+<p><strong>▍孩子在人際中的困難</strong><br>
+孩子說在學校沒有朋友、被排擠、不被理解。<br>
+你想幫，卻不知道該從哪裡開始；<br>
+老師說沒問題，但你知道孩子正在受傷。</p>
+<p><strong>▍對工作的迷惘</strong><br>
+你對現在的工作提不起勁，卻也不知道自己適合什麼。<br>
+換工作好像很冒險，不換又覺得心在慢慢枯萎。</p>
+<p><strong>▍面對新的關係，卻充滿不安</strong><br>
+你感覺對方有些地方怪怪的，<br>
+但說不出是哪裡不對，也不知道該不該繼續。</p>
+<p><strong>▍想更認識真正的自己</strong><br>
+你想知道自己的優點與盲點，<br>
+為什麼別人眼中的你，和你心裡的自己不一樣。</p>
+<p><strong>▍情緒低落、焦慮，卻說不出原因</strong><br>
+你知道自己不太對勁，<br>
+卻沒有人能真正說出「為什麼會這樣」。</p>
+<p><strong>▍你想知道哪些顏色真正支持你</strong><br>
+不只是好不好看，而是<br>
+什麼顏色能穩定你、保護你、支持你的狀態。</p>
+<p><strong>▍你想了解自己的靈性狀態</strong><br>
+你感覺自己不只是為了生活而活，<br>
+卻不知道目前的能量狀態卡在哪一個階段。</p>
+<h5 id="透過氣場我能協助你看見">透過氣場，我能協助你看見 </h5>
 <ul>
-<li>明知道問題在哪，卻始終無法真正改變</li>
-<li>同樣的情緒、關係或狀況一再重複出現</li>
-<li>理性上沒問題，內在卻總覺得疲憊、空洞或不對勁</li>
-<li>嘗試過很多方法，但始終無法「整合」</li>
+<li>你現在真正卡住的位置</li>
+<li>關係中彼此的互動模式</li>
+<li>情緒與能量為何無法流動</li>
+<li>你適合的方向、節奏與修復方式</li>
 </ul>
-<p>這些狀態，往往不是意志力或理解不足的問題，而是<strong>內在能量狀態尚未被看見與調整</strong>。</p>
-<h2 id="aura-reading-在做什麼">Aura Reading 在做什麼？ </h2>
-<p>Aura reading 並不是預測未來，也不是評斷對錯。<br>
-它的核心作用是——</p>
-<blockquote>
-<p><strong>幫助你看見自己目前真實的內在狀態。</strong></p>
-</blockquote>
-<p>每個人都在以一種「能量狀態」生活，而這個狀態會影響：</p>
-<ul>
-<li>你的情緒反應</li>
-<li>你吸引的人與事件</li>
-<li>你做決定的方式</li>
-<li>你是否能真正改變</li>
-</ul>
-<p>Aura reading 所做的，是協助你理解：</p>
-<ul>
-<li>你現在處在哪個狀態</li>
-<li>哪些能量在支持你，哪些在消耗你</li>
-<li>你是否正在使用不屬於自己的模式生活</li>
-</ul>
-<h2 id="為什麼有些問題只有-aura-reading-能幫得上忙">為什麼有些問題，只有 Aura Reading 能幫得上忙？ </h2>
-<h3 id="1-它能看見語言之前的層次">1. 它能看見「語言之前」的層次 </h3>
-<p>有些狀態並非想法或情緒，而是在更深層、尚未被語言化的層面。<br>
-這也是為什麼有時候「想通了」卻還是無法改變。</p>
-<p>Aura reading 可以直接看見這些潛在結構。</p>
-<h3 id="2-它關注的是狀態不是事件本身">2. 它關注的是「狀態」，不是事件本身 </h3>
-<p>很多問題並不是事件造成的，而是當下的內在狀態無法承載變化。<br>
-當狀態被調整，事情往往會自然改變，而不需要強迫自己努力。</p>
-<h3 id="3-它能分辨哪些是你哪些不是">3. 它能分辨哪些是「你」，哪些不是 </h3>
-<p>有些模式來自於：</p>
-<ul>
-<li>家族影響</li>
-<li>過去關係的殘留</li>
-<li>長期被他人投射的角色</li>
-</ul>
-<p>Aura reading 能幫助你分辨：<br>
-哪些能量是你真正的本質，哪些只是暫時附著的狀態。</p>
-<h2 id="誰適合進行-aura-reading">誰適合進行 Aura Reading？ </h2>
-<p>你可能特別適合，如果你正在經歷：</p>
-<ul>
-<li>重複的人生課題（關係、工作、自我價值）</li>
-<li>對「我是誰」感到模糊或失去方向</li>
-<li>長期疲憊、卡住，但檢查一切正常</li>
-<li>感覺自己不像自己</li>
-<li>想更理解內在狀態，而不只是解決表面問題</li>
-</ul>
-<h2 id="aura-reading-能帶來什麼">Aura Reading 能帶來什麼？ </h2>
-<p>它不會告訴你該怎麼做，<br>
-而是讓你<strong>看清自己正在用什麼狀態生活</strong>。</p>
-<p>當這一點被看見時，改變往往自然發生——<br>
-不是靠努力，而是回到真正適合你的狀態。</p>
-<h2 id="聯絡方式">聯絡方式 </h2>
+<p>氣場早就已經在提醒你，只是沒有人替你翻譯。</p>
+<h3 id="聯絡方式">聯絡方式 </h3>
 <ul>
 <li>Line 帳號 @211wegrx</li>
 <li>IG 帳號 <a href="https://www.instagram.com/taomuru/">taomuru</a></li>
@@ -97,14 +84,14 @@
 <li>Email: <a href="mailto:taomuru@gmail.com">taomuru@gmail.com</a></li>
 <li>預約氣場諮詢 <a href="https://calendly.com/taomuru/new-meeting">https://calendly.com/taomuru/new-meeting</a></li>
 </ul>
-<h2 id="服務方式">服務方式 </h2>
+<h3 id="服務方式">服務方式 </h3>
 <ul>
 <li>不提供健康問題諮詢,不提供過世親人通靈</li>
 <li>需要提供一張全身照片, 並參考下方照片,注意人像比例跟姿勢, 頭頂上方空間佔據30%, 人佔據照片高度的20%, 腳底到最下方的空間佔據30%, 掌心向前, 背景最好是淡色的牆壁<br>
 <img src="./aura-body.jpg" alt="氣場拍照姿勢"></li>
 <li>Google評價 <a href="https://g.page/r/CQfz6lbreLYLEBM/review">https://g.page/r/CQfz6lbreLYLEBM/review</a></li>
 </ul>
-<h2 id="付款方式-paypal">付款方式 (Paypal) </h2>
+<h3 id="付款方式-paypal">付款方式 (Paypal) </h3>
 <ul>
 <li><a href="https://www.paypal.com/ncp/payment/5M7YTG2PM4HCL">一次性氣場解讀</a>。每次台幣 1,000元。</li>
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-1A242348KM810422RNEURFKA">個人 Aura Reading 月訂閱</a> 提供每月無限次數提問，每週回覆一次。適合希望定期了解能量狀態的個人。每月台幣 1,800 元。</li>
@@ -112,7 +99,7 @@
 <li><a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-5P259692CH450731XNEURLHQ">朋友分享 Aura Reading 月訂閱（2 人方案）</a> 提供 2 位朋友共享，每月無限次數提問，每週回覆一次。適合想一起探索能量的朋友組合。每月台幣 2,400 元。</li>
 <li>付款之後，請提供您Paypal付款Email。</li>
 </ul>
-<h2 id="aura氣場圖">Aura氣場圖 </h2>
+<h3 id="aura氣場圖">Aura氣場圖 </h3>
 <p><img src="./aura.jpg" alt="Aura氣場圖"></p>
 
       </div>
