--- a/index-en.html
+++ b/index-en.html
@@ -25,6 +25,9 @@
       <div class="crossnote markdown-preview  ">
       
 <p><a href="./index.html">繁體中文</a> | <a href="./index-en.html">English</a></p>
+<ul>
+<li><a href="./feedback-en.html">User's feedback</a></li>
+</ul>
 <h3 id="have-you-ever-asked-yourself-these-questions-yet-still-couldnt-find-the-answers">Have you ever asked yourself these questions, yet still couldn’t find the answers? </h3>
 <p>You’ve actually been trying very hard.<br>
 But some things can’t be untangled through endurance, effort, or logic alone.</p>
