--- a/feedback.html
+++ b/feedback.html
@@ -25,6 +25,7 @@
       <div class="crossnote markdown-preview  ">
       
 <h2 id="個案意見回饋">個案意見回饋 </h2>
+<p><img src="./aura-pic2.png" alt=""></p>
 <h5 id="個案1回饋">個案1回饋 </h5>
 <p>能更清楚地覺察自己當下的狀態，對於個性的描述也覺得相當貼切；而子宮時期的負面經驗確實存在，因此關於讓身心達成一致的建議，讓我收穫很多。</p>
 <hr>
