--- a/feedback-en.html
+++ b/feedback-en.html
@@ -25,6 +25,7 @@
       <div class="crossnote markdown-preview  ">
       
 <h2 id="client-feedback">Client Feedback </h2>
+<p><img src="./aura-pic2.png" alt=""></p>
 <h3 id="client-1-feedback">Client 1 Feedback </h3>
 <p>I was able to gain a clearer awareness of my current state, and the personality description felt very accurate. The negative experiences from the womb period also resonated with me, and the guidance on aligning mind and body was truly valuable and insightful.</p>
 <hr>
