--- a/index-en.html
+++ b/index-en.html
@@ -25,9 +25,6 @@
       <div class="crossnote markdown-preview  ">
       
 <p><a href="./index.html">繁體中文</a> | <a href="./index-en.html">English</a></p>
-<ul>
-<li><a href="./feedback-en.html">User's feedback</a></li>
-</ul>
 <h3 id="have-you-ever-asked-yourself-these-questions-yet-still-couldnt-find-the-answers">Have you ever asked yourself these questions, yet still couldn’t find the answers? </h3>
 <p>You’ve actually been trying very hard.<br>
 But some things can’t be untangled through endurance, effort, or logic alone.</p>
@@ -122,8 +119,59 @@ it’s just that no one has helped translate them for you yet.</p>
 </ul>
 <p>After payment, please provide the PayPal email used for the transaction.</p>
 <hr>
-<h2 id="aura-image-example">Aura Image Example </h2>
-<p><img src="./aura.jpg" alt="Aura Image"></p>
+<h3 id="client-feedback">Client Feedback </h3>
+<p><img src="./aura-pic2.png" alt=""></p>
+<h3 id="client-1-feedback">Client 1 Feedback </h3>
+<blockquote>
+<p>I was able to gain a clearer awareness of my current state, and the personality description felt very accurate. The negative experiences from the womb period also resonated with me, and the guidance on aligning mind and body was truly valuable and insightful.</p>
+</blockquote>
+<hr>
+<h3 id="client-2-feedback">Client 2 Feedback </h3>
+<blockquote>
+<p>This analysis felt like looking into a mirror—it allowed me to see myself more clearly and better understand why I feel such a strong connection to nature. It not only helped me reflect on the past but also gently outlined new directions and possibilities for the future.</p>
+</blockquote>
+<hr>
+<h3 id="client-3-feedback">Client 3 Feedback </h3>
+<blockquote>
+<p>Through this reading, I gained a deeper understanding and awareness of my current state. The multi-layered insights and suggestions provided were truly helpful in supporting my self-awareness and personal adjustment. Overall, the experience was very meaningful and beneficial.</p>
+</blockquote>
+<hr>
+<h3 id="client-4-feedback-healing-practitioner">Client 4 Feedback (Healing Practitioner) </h3>
+<blockquote>
+<p>From a healer’s perspective, the comparison between the before-and-after aura readings was very accurate, especially in revealing deeper inner states that the client themselves may not yet be consciously aware of.<br>
+For example, during the healing process, I sensed unresolved issues in the sacral chakra related to non-recent relationships—areas the client had not yet consciously recognized.<br>
+When both parties are healers, it is often easier to understand each other’s language and insights. However, for those who are new to spiritual or energetic work, or who have limited self-awareness in this area, it may be more difficult to grasp the differences or fully understand what is being conveyed.<br>
+Therefore, I would suggest incorporating visual aids, such as images or simple diagrams, to help clients who are less familiar with energy work better understand the interpretations.</p>
+</blockquote>
+<hr>
+<h3 id="healer-5-feedback-healing-practitioner-using-the-aura-report-with-clients">Healer 5 Feedback (Healing Practitioner using the Aura Report with Clients) </h3>
+<blockquote>
+<p>When I first received the report, I did not know the client personally, so I wasn’t entirely sure how to apply it. I could only identify which chakras might need more healing support, and I had no particular expectations about what would unfold during the session, as my intuitive perception tends to be quite fluid.<br>
+However, I found that one of the greatest strengths of this report is that it allows healers to anticipate areas where a client may need support. This was extremely helpful.<br>
+During the actual healing process, I noticed many experiences that closely aligned with what was described in the report.<br>
+For example, while working with the upper chakras, I sensed an unexplained fear and discomfort, which later became clear as being related to the client’s heightened sensitivity. When working on the front seven chakras, I also sensed a defensive quality—almost as if the energy was protecting the client—yet at the same time, I could feel the energy beginning to flow into the chakras. This strongly resonated with the report’s description of defensiveness and social anxiety.<br>
+In the follow-up conversation, I felt a much deeper sense of connection with the client. Overall, I believe this report is a very valuable tool for healers.</p>
+</blockquote>
+<hr>
+<h3 id="healer-6-feedback">Healer 6 Feedback </h3>
+<p>(Healing practitioner who conducted Aura readings for their family and applied the reports in other sessions)</p>
+<blockquote>
+<p>I conducted aura readings for my family members, and the results aligned remarkably well with our family dynamics. The emotions and experiences reflected in each person’s aura closely matched our real-life interactions, showing a strong sense of synchronicity.<br>
+I believe that people today place increasing importance on relationships, and this type of analysis is therefore highly valuable. With more accumulated cases, it could help establish a more systematic and structured evaluation process.<br>
+From a practical perspective, aura analysis can also help clarify healing priorities.<br>
+For example, when a client reports headaches, the intuitive approach might focus directly on the head. However, the aura information revealed that the root cause was related to trauma and emotional factors. During the actual healing session, it became clear that the lower chakras required significant energetic support. This suggested that blockages in the lower chakras were restricting upward energy flow, ultimately manifesting as head discomfort.</p>
+</blockquote>
+<hr>
+<h3 id="client-7-feedback">Client 7 Feedback </h3>
+<blockquote>
+<p>Thank you for providing these insights. I feel they are very accurate and have helped me clearly recognize the abilities I currently lack. The challenges I am facing now truly align with what you described. I will continue to adjust my physical and emotional state to become more grounded and resilient. I genuinely feel that your interpretation was very accurate.</p>
+</blockquote>
+<hr>
+<h3 id="client-8-feedback">Client 8 Feedback </h3>
+<blockquote>
+<p>I’m the one who asked you to do a reading for me a few days ago — it was incredibly accurate! I really think you’re amazing.</p>
+</blockquote>
+<hr>
 
       </div>
       
