--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     
       <div class="crossnote markdown-preview  ">
       
+<script>
+
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KQMJWD57');</script>
+<p><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KQMJWD57"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript></p>
+
 <p><a href="./index.html">繁體中文</a> | <a href="./index-en.html">English</a></p>
 <h3 id="你是不是也在心裡問過這些問題卻一直找不到答案">你是不是也在心裡問過這些問題，卻一直找不到答案？ </h3>
 <p>你其實已經很努力了。<br>
