--- a/index-en.html
+++ b/index-en.html
@@ -26,13 +26,14 @@
       
 <script>
 
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KQMJWD57');</script>
-<p><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KQMJWD57"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript></p>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CRVQVR8HKR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CRVQVR8HKR');
+</script>
 
 <p><a href="./index.html">繁體中文</a> | <a href="./index-en.html">English</a></p>
 <h3 id="have-you-ever-asked-yourself-these-questions-yet-still-couldnt-find-the-answers">Have you ever asked yourself these questions, yet still couldn’t find the answers? </h3>
