--- a/index-en.html
+++ b/index-en.html
@@ -24,9 +24,7 @@
     
       <div class="crossnote markdown-preview  ">
       
-<script>
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CRVQVR8HKR"></script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-CRVQVR8HKR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -34,7 +32,6 @@
 
   gtag('config', 'G-CRVQVR8HKR');
 </script>
-
 <p><a href="./index.html">繁體中文</a> | <a href="./index-en.html">English</a></p>
 <h3 id="have-you-ever-asked-yourself-these-questions-yet-still-couldnt-find-the-answers">Have you ever asked yourself these questions, yet still couldn’t find the answers? </h3>
 <p>You’ve actually been trying very hard.<br>
