--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     
       <div class="crossnote markdown-preview  ">
       
-<script>
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-CRVQVR8HKR"></script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-CRVQVR8HKR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -34,7 +32,6 @@
 
   gtag('config', 'G-CRVQVR8HKR');
 </script>
-
 <p><a href="./index.html">繁體中文</a> | <a href="./index-en.html">English</a></p>
 <h3 id="你是不是也在心裡問過這些問題卻一直找不到答案">你是不是也在心裡問過這些問題，卻一直找不到答案？ </h3>
 <p>你其實已經很努力了。<br>
